# mano-asr

./: .gitignore  LICENSE  README.md  client.py  pyproject.toml  server.py
core/: auto_model.py
core/models/fsmn/: __init__.py  base.py  config.py  convert.py  encoder.py  frontend.py  model.py  postprocess.py
core/models/funasr/: __init__.py  adaptor.py  audio.py  convert.py  encoder.py  funasr.py  qwen3.py
core/models/qwen3_asr/: README.md  __init__.py  config.py  qwen3_asr.py  qwen3_forced_aligner.py
docs/: release-checklist.md
homebrew/: README.md  build-bottle.sh  build-release.sh  mano-asr-local.rb  mano-asr.rb  test-local.sh
manoasr/: __init__.py
manoasr/cli/: __init__.py  daemon.py  main.py
manoasr/cli/commands/: __init__.py  config.py  doctor.py  logs.py  model.py  port.py  service.py  transcribe.py
manoasr/cli/utils/: __init__.py  config.py  console.py  constants.py  download.py  process.py  update_checker.py
models/: README.md
scripts/: start.sh
utils/: hotwords_extractor.py  load_utils.py  repetition_detector.py
