[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "manoasr"
version = "0.1.0"
description = "本地语音转写服务，基于 MLX，针对 Apple Silicon 优化"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "fastapi>=0.100",
    "python-multipart>=0.0.5",
    "uvicorn>=0.20",
    "numpy",
    "mlx>=0.5",
    "mlx-lm",
    "mlx-audio",
    "transformers",
    "huggingface_hub",
    "modelscope",
    "tqdm",
    "soundfile",
]

[project.scripts]
mano-asr = "manoasr.cli.main:main"

[tool.setuptools.packages.find]
include = ["manoasr*"]
